feat: upgrade next version

--- a/package.json
+++ b/package.json
@@ -47,12 +47,12 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.503.0",
     "motion": "^12.16.0",
-    "next": "^15.4.0-canary.69",
+    "next": "^15.4.1",
     "next-themes": "^0.4.6",
     "next-transition-router": "^0.2.9",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-day-picker": "^9.6.7",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
     "react-resizable-panels": "^2.1.9",
     "sonner": "^2.0.3",
@@ -62,7 +62,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@subbly/swc-plugin-add-element-source": "^0.1.4",
+    "@subbly/swc-plugin-add-element-source": "^0.1.7",
     "@tailwindcss/postcss": "^4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
