--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -1,34 +1,31 @@
 {
-  // These tasks will run in order when initializing your CodeSandbox project.
   "setupTasks": [
     {
       "name": "Install Dependencies",
-      "command": "npm install"
+      "command": "pnpm install"
     },
     {
       "name": "Install",
       "command": "npm install -g netlify-cli"
     }
   ],
-
-  // These tasks can be run from CodeSandbox. Running one will open a log in the app.
   "tasks": {
     "dev": {
       "name": "Start Dev Server",
-      "command": "npm run dev",
+      "command": "pnpm run dev",
       "runAtStart": true,
       "preview": {
         "port": 3000
       },
       "restartOn": {
-        "files": ["package-lock.json", "**/*.(css|scss)"],
+        "files": ["pnpm-lock.yaml", "**/*.(css|scss)"],
         "clone": true,
         "resume": false
       }
     },
     "install": {
       "name": "Install Dependencies",
-      "command": "npm install",
+      "command": "pnpm install",
       "runAtStart": true,
       "restartOn": {
         "files": ["package.json"]
