--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,6 @@
 {
-  "name": "Devcontainer",
-  "image": "ghcr.io/codesandbox/devcontainers/typescript-node:latest"
+  "name": "Subbly Starter Template",
+  "build": {
+    "dockerfile": "Dockerfile"
+  }
 }
