feat: add default .env variables to example.env

--- a/example.env
+++ b/example.env
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_SUBBLY_API_KEY=
+NEXT_PUBLIC_SHOP_NAME=
+NEXT_PUBLIC_SHOP_CURRENCY=
+NEXT_PUBLIC_SUPPORT_EMAIL=
+NEXT_PUBLIC_TERMS_CONDITIONS_URL=
