--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@subbly/react": "0.0.11-beta.0",
+    "@subbly/react": "0.0.11-beta.2",
     "@subbly/sdk": "^0.6.10",
     "@tanstack/react-query": "^5.74.7",
     "class-variance-authority": "^0.7.1",
@@ -49,6 +49,7 @@
     "lucide-react": "^0.503.0",
     "motion": "^12.16.0",
     "next": "^15.4.5",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "next-transition-router": "^0.2.9",
     "react": "^19.1.1",
