--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,4 +2,4 @@ FROM ghcr.io/codesandbox/devcontainers/typescript-node:0.5
 
 RUN apt-get update && apt-get install -y ripgrep && apt-get clean
 
-RUN su node -c "npm install -g netlify-cli pnpm"
+RUN su node -c "npm install -g netlify-cli pnpm nodemon chokidar-cli"
