--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@subbly/react": "0.0.11-beta.3",
+    "@subbly/react": "0.0.11-beta.9",
     "@subbly/sdk": "^0.6.10",
     "@tanstack/react-query": "^5.74.7",
     "class-variance-authority": "^0.7.1",
@@ -74,6 +74,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "shadcn": "^3.3.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
