--- a/components.json
+++ b/components.json
@@ -17,5 +17,8 @@
     "lib": "@/lib",
     "hooks": "@/hooks"
   },
-  "iconLibrary": "lucide"
+  "iconLibrary": "lucide",
+  "registries": {
+    "@subbly": "https://registry.subbly.dev/r/{name}.json"
+  }
 }
