--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -12,7 +12,7 @@
   "tasks": {
     "dev": {
       "name": "Start Dev Server",
-      "command": "nodemon --exec 'pnpm run dev' --ext css,scss --watch src --watch pnpm-lock.yaml",
+      "command": "pm2 delete subbly-dev -s || true && pm2 start ecosystem.config.js --attach -s",
       "runAtStart": true,
       "preview": {
         "port": 3000
