--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@subbly/react": "0.0.14",
+    "@subbly/api-client": "^0.6.20",
+    "@subbly/kit": "^0.0.15",
+    "@subbly/react": "0.0.15",
     "@subbly/sdk": "^0.6.19",
     "@tanstack/react-query": "^5.74.7",
     "class-variance-authority": "^0.7.1",
@@ -48,13 +50,13 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.503.0",
     "motion": "^12.16.0",
-    "next": "^15.5.2",
+    "next": "16.0.0",
     "next-intl": "^4.3.4",
     "next-themes": "^0.4.6",
     "next-transition-router": "^0.2.9",
-    "react": "^19.1.1",
+    "react": "19.2.0",
     "react-day-picker": "^9.8.0",
-    "react-dom": "^19.1.1",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.61.0",
     "react-resizable-panels": "^2.1.9",
     "sonner": "^2.0.7",
@@ -64,19 +66,25 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@next/eslint-plugin-next": "^15.5.2",
+    "@next/eslint-plugin-next": "16.0.0",
     "@subbly/swc-plugin-add-element-source": "^0.1.7",
     "@tailwindcss/postcss": "^4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "eslint": "^9",
-    "eslint-config-next": "15.5.2",
+    "eslint-config-next": "16.0.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "shadcn": "^3.3.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.2",
+      "@types/react-dom": "19.2.2"
+    }
   }
 }
