--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@subbly/api-client": "^0.6.20",
     "@subbly/kit": "^0.0.18",
-    "@subbly/react": "0.0.18",
-    "@subbly/sdk": "^0.6.19",
+    "@subbly/react": "^0.0.18",
+    "@subbly/sdk": "^0.6.20",
     "@tanstack/react-query": "^5.74.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,11 +50,11 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.503.0",
     "motion": "^12.16.0",
-    "next": "16.0.1",
+    "next": "^16.0.3",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
-    "next-transition-router": "^0.2.9",
-    "react": "19.2.0",
+    "next-transition-router": "^0.2.11",
+    "react": "^19.2.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.61.0",
@@ -65,15 +65,15 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "16.0.1",
+    "@next/eslint-plugin-next": "^16.0.3",
     "@subbly/swc-plugin-add-element-source": "^0.1.8",
     "@tailwindcss/postcss": "^4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.3",
     "eslint-plugin-react-hooks": "^5.2.0",
     "shadcn": "^3.3.1",
     "tailwindcss": "^4",
