--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@subbly/api-client": "^0.6.20",
-    "@subbly/kit": "^0.0.18",
-    "@subbly/react": "^0.0.18",
+    "@subbly/kit": "^0.0.19",
+    "@subbly/react": "^0.0.19",
     "@subbly/sdk": "^0.6.20",
     "@tanstack/react-query": "^5.74.7",
     "class-variance-authority": "^0.7.1",
@@ -85,5 +85,6 @@
       "@types/react": "19.2.2",
       "@types/react-dom": "19.2.2"
     }
-  }
+  },
+  "packageManager": "pnpm@10.20.0+sha512.cf9998222162dd85864d0a8102e7892e7ba4ceadebbf5a31f9c2fce48dfce317a9c53b9f6464d1ef9042cba2e02ae02a9f7c143a2b438cd93c91840f0192b9dd"
 }
