--- a/main/package.json
+++ b/main/package.json
@@ -50,7 +50,7 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.503.0",
     "motion": "^12.16.0",
-    "next": "^16.0.3",
+    "next": "^16.0.5",
     "next-intl": "^4.4.0",
     "next-themes": "^0.4.6",
     "next-transition-router": "^0.2.11",
@@ -65,15 +65,15 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^16.0.3",
+    "@next/eslint-plugin-next": "^16.0.5",
     "@subbly/swc-plugin-add-element-source": "^0.1.8",
     "@tailwindcss/postcss": "^4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "eslint": "^9",
-    "eslint-config-next": "^16.0.3",
+    "eslint-config-next": "^16.0.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "shadcn": "^3.3.1",
     "tailwindcss": "^4",
