fix: correct path references in task and ecosystem configs

--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -20,7 +20,7 @@
     },
     "watch": {
       "name": "Watch Dependencies",
-      "command": "cd main && export SHELL=/bin/bash; chokidar 'package.json' -c 'cd main && pnpm install --dangerously-allow-all-builds'",
+      "command": "cd main && export SHELL=/bin/bash; chokidar 'package.json' -c 'pnpm install --dangerously-allow-all-builds'",
       "runAtStart": true
     }
   }
