fix: use absolute paths in pm2 and codesandbox configs
- resolve path resolution issues when pm2 is started from different directories
- increase restart backoff delay for stability

--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -8,7 +8,7 @@
   "tasks": {
     "dev": {
       "name": "Start Dev Server",
-      "command": "cd main && (pm2 delete subbly-dev -s || true) && pm2 start ecosystem.config.js --attach -s",
+      "command": "cd main && (pm2 delete subbly-dev -s || true) && pm2 start /project/workspace/main/ecosystem.config.js --attach -s",
       "runAtStart": true,
       "preview": {
         "port": 3000
