feat: add subbly-api scripts for private API client
- standalone Node.js scripts for all PrivateSubblyClient endpoints (products, bundles, tags, surveys, metafields)
- shared client setup with dotenv for API credentials
- all scripts output raw JSON for piping through jq
- add jq to devcontainer Dockerfile

--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -3,6 +3,10 @@
     {
       "name": "Install Dependencies",
       "command": "cd main && pnpm install --dangerously-allow-all-builds"
+    },
+    {
+      "name": "Install API Dependencies",
+      "command": "cd subbly-api && pnpm install"
     }
   ],
   "tasks": {
