feat: restructure project layout and add agent skills
- rename subbly-api to store-actions for clarity
- add builds/ package with migration archive script
- add agent skills for cms, localization, store management, design, and troubleshooting
- move ecosystem.config.js to project root
- add .csbignore and update .gitignore

--- a/.codesandbox/tasks.json
+++ b/.codesandbox/tasks.json
@@ -6,13 +6,13 @@
     },
     {
       "name": "Install API Dependencies",
-      "command": "cd subbly-api && pnpm install"
+      "command": "cd store-actions && pnpm install --dangerously-allow-all-builds"
     }
   ],
   "tasks": {
     "dev": {
       "name": "Start Dev Server",
-      "command": "cd main && (pm2 delete subbly-dev -s || true) && pm2 start /project/workspace/main/ecosystem.config.js --attach -s",
+      "command": "cd main && (pm2 delete subbly-dev -s || true) && pm2 start /project/workspace/ecosystem.config.js --attach -s",
       "runAtStart": true,
       "preview": {
         "port": 3000
