chore: remove agent-browser skill and devcontainer dependency

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,6 +2,4 @@ FROM ghcr.io/codesandbox/devcontainers/typescript-node:22
 
 RUN apt-get update && apt-get install -y ripgrep jq && apt-get clean
 
-RUN su node -c "npm install -g netlify-cli pnpm chokidar-cli pm2 agent-browser"
-
-RUN su node -c "yes | agent-browser install --with-deps"
+RUN su node -c "npm install -g netlify-cli pnpm chokidar-cli pm2"
