--- a/builds/package.json
+++ b/builds/package.json
@@ -2,7 +2,7 @@
   "name": "builds",
   "private": true,
   "scripts": {
-    "build:migration": "tsx --env-file=.env scripts/archive-migration.ts"
+    "publish:upgrade": "tsx --env-file=.env scripts/publish-upgrade.ts"
   },
   "devDependencies": {
     "@aws-sdk/client-s3": "^3.700.0",
